--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,10 @@
         "files": [
             "app/Support/helpers.php"
         ]
+    },
+    "scripts": {
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ]
     }
 }
