--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,6 @@ APP_NAME=Slim
 
 DB_DRIVER=mysql
 DB_HOST=localhost
-DB_DATABASE=slim4
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=slim
+DB_USERNAME=slim
+DB_PASSWORD=slim
