--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "private": true,
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "mix --production"
   },
   "devDependencies": {
-    "alpinejs": "^2.6.0",
-    "autoprefixer": "^9.8.6",
-    "cross-env": "^7.0.2",
-    "laravel-mix": "^5.0.5",
-    "tailwindcss": "^1.7.6",
-    "vue-template-compiler": "^2.6.12"
+    "alpinejs": "^3.2",
+    "autoprefixer": "^10.3",
+    "laravel-mix": "^6.0",
+    "postcss": "^8.3",
+    "tailwindcss": "^2.2",
+    "vue-template-compiler": "^2.6"
   }
 }
